# lsa-whisperer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  args.cpp  cache.cpp  crypt.cpp  main.cpp  msv1_0.cpp  pybindings.cpp
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: 0-bug-issue.md  1-build-issue.md  2-command-request.md  3-other-issue.md
.github/workflows/: build.yml  wiki.yml
cmake/: FindBreathe.cmake  FindSphinx.cmake  ap.cmake  midl.cmake  ms-dtyp.h.in  ms-dtyp.idl  requirements.cmake
docs/: conf.py  index.rst  requirements.txt
include/: CMakeLists.txt  all.hpp  appcontainer.hpp  args.hpp  cache.hpp  cli.hpp  cloudap.hpp  commands.hpp  crypt.hpp  kerberos.hpp  lazy.hpp  live.hpp  lsa.hpp  messages.hpp  msv1_0.hpp  negoexts.hpp  negotiate.hpp  netlogon.hpp  pch.hpp  pku2u.hpp  rpc.hpp  schannel.hpp  spm.hpp  token.hpp  wdigest.hpp
include/msv1_0/: args.hpp  cache.hpp  messages.hpp  proxy.hpp  stubs.hpp
include/pku2u/: args.hpp  messages.hpp  proxy.hpp  stubs.hpp
include/schannel/: args.hpp  messages.hpp  proxy.hpp  stubs.hpp
libraries/: .clang-format
source/: CMakeLists.txt  all.cpp  appcontainer.cpp  broker.cpp  cli.cpp  cloudap.cpp  commands.cpp  crypt.cpp  kerberos.cpp  live.cpp  lsa.cpp  main.cpp  ms-sspir.acf  ms-sspir.idl  msv1_0.cpp  negoexts.cpp  negotiate.cpp  pku2u.cpp  pybindings.cpp  rpc.cpp  schannel.cpp  spm.cpp  token.cpp  wdigest.cpp  wlid.idl
source/msv1_0/: args.cpp  cache.cpp  main.cpp  proxy.cpp  pybindings.cpp  stubs.cpp
source/pku2u/: args.cpp  main.cpp  proxy.cpp  stubs.cpp
source/schannel/: args.cpp  proxy.cpp  stubs.cpp
temp_wiki_5a03e793e1858225d43bb072b1770695f74e6f4c/: Home.asciidoc
temp_wiki_5a03e793e1858225d43bb072b1770695f74e6f4c/sspi/: credssp.asciidoc  msv1_0.asciidoc  negoexts.asciidoc  negotiate.asciidoc  pku2u.asciidoc  schannel.asciidoc
wiki/: Home.asciidoc  Usage.asciidoc  lsa and ssp.adoc  lsa.adoc
wiki/ap/: msv1_0.adoc  wdigest.adoc
wiki/sspi/: cloudap.adoc  cloudap.asciidoc  credssp.adoc  credssp.asciidoc  kerberos.asciidoc  livessp.asciidoc  msapsspc.asciidoc  msnsspc.asciidoc  msv1_0.adoc  msv1_0.asciidoc  negoexts.adoc  negoexts.asciidoc  negotiate.asciidoc  pku2u.asciidoc  schannel.adoc  schannel.asciidoc  sfapm.asciidoc  spm.asciidoc  tspkg.asciidoc  wdigest.adoc  wdigest.asciidoc
